// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutboundIdentifierListsFormLayout renders , inherited is true , fields should be disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    disabled={true}
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={true}
    inputType="text"
    label="Description"
    name="description"
  />
</form>
`;

exports[`OutboundIdentifierListsFormLayout renders , isSaving is true , fields should be disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    disabled={true}
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={true}
    inputType="text"
    label="Description"
    name="description"
  />
</form>
`;

exports[`OutboundIdentifierListsFormLayout renders regular form 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={false}
    inputType="text"
    label="Description"
    name="description"
  />
</form>
`;
